--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,18 @@
 @use 'variaveis';
 @use 'hero';
+@use 'shows';
+@use 'plans';
+
+
 @font-face {
-    font-family: Avenir;;
-    src: url(../assets/fonts/Avenir-Regular.woff2);
+    font-family: Avenir;
+    src: url(../fonts/Avenir-Regular.woff2);
     font-weight: 400;
 
 }
 @font-face {
-    font-family: Avenir;;
-    src: url(../assets/fonts/Avenir-Bold.woff2);
+    font-family: Avenir;
+    src: url(../fonts/Avenir-Bold.woff2);
     font-weight: 700;
     
 }
@@ -19,12 +23,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Avenir, sans-serif;
 }
 
 
 body {
     background-color: variaveis.$corDeFundo;
-    font-family: Avenir, sans-serif;
+    font-family: Avenir;
 }
 
 @mixin text($fontSize: 16px) {
@@ -66,4 +71,17 @@ body {
 
 .title--small {
     @include title(28px);
+}
+
+.button {
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    color: variaveis.$corTextoSecundario;
+    background-color: #6421ff;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
 }
