--- a/src/styles/shows.scss
+++ b/src/styles/shows.scss
@@ -10,6 +10,13 @@
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
 
+
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+
+
+        }
+
         &--is-active {
             display: grid;
 
@@ -28,6 +35,13 @@
     &__tabs {
         display: flex;
         justify-content: center;
+
+        @media (max-width: 768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 18px;
+
+        }
         
         &__button {
             
@@ -45,6 +59,11 @@
             &--is-active {
                 border-color: variaveis.$corTextoSecundario;
 
+            }
+            @media (max-width: 768px) {
+                font-size: 16px;
+    
+    
             }
         }
     }
